--- a/src/train.ipynb
+++ b/src/train.ipynb
@@ -17,7 +17,7 @@
     "N_CLASSES = 10\n",
     "DATASET_NAME = 'CIFAR10'\n",
     "model_dir = '../model/'\n",
-    "IS_LOAD_MODEL = False"
+    "IS_LOAD_MODEL = True"
    ]
   },
   {
@@ -61,7 +61,7 @@
     "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "epochs = 12\n",
+    "epochs = 3\n",
     "is_train = True\n",
     "is_validate = True\n",
     "for epoch in range(0, epochs):\n",
